res/css/index.css
/* ... */
#write-hanshi
{
	display: none;
	z-index: 2;
	position: absolute;
	left: 50%;
	top: 50%;
	width: 415px;
	height: 541px;
	background: #fefefe;
	margin-left: -436px;
	margin-top: -270px;
}
#write-bunchin
{
	display: none;
	z-index: 2;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -385px; /* width[317] + 68px; */
	margin-top: -265px;
}

#write-tools
{
	z-index: 0;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: 29px;
	margin-top: -320px;
	background: url(../img/steel.png) no-repeat;
	background-position: left center;
	height: 640px;
	width: 540px;
}

/* write-tools-ink (Ink) */
#write-tools-ink
{
	display: none;
	cursor: pointer;
	z-index: 2;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -209px;
	margin-top: -12px;
	width: 180px;
	height: 255px;
}
#write-tools-ink #write-tools-ink-label
{
	position: absolute;
	top: 120px;
	left: 50%;
	margin-left: -34px;
}


/* write-tools-stage (Fude) */
#write-tools-stage
{
	display: none;
	cursor: pointer;
	z-index: 2;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -18px;
	margin-top: -285px;
}
#write-tools-stage #write-tools-stage-label
{
	position: absolute;
	top: 360px;
	left: 43px;
	width: 79px;
	height: 46px;
	z-index: 7;
}

#write-fude-small
{
	z-index: 5;
	position: absolute;
	left: 8px;
	top: 183px;
}
#write-fude-medium
{
	z-index: 6;
	position: absolute;
	left: 41px;
	top: 97px;
}
#write-fude-large
{
	z-index: 5;
	position: absolute;
	left: 68px;
	top: 50px;
}

/* write-tools-movie */
#write-tools-movie
{
	display: none;
}

#write-paper:after
{
	z-index: 1;
	
	position: absolute;
	top: 50%;
	margin-top: -320px;

	height: 640px;
	width: 100%;
	content: '';
	display: block;
	background: url(../img/frame.png) top center no-repeat;
}
.write-ready #write-paper:after
{
	z-index: 0;
}

/* Hand Visiblity Checkbox */
#hand-visibility-checkbox
{
	display: none;
	position: absolute;
	left: 53px;
	bottom: 55px;
	color: #ffffff;
	line-height: 13px;
	font-size: 13px;
	text-decoration: none;
	
	padding-left: 18px;
	background: transparent url(../img/icon_checkbox_01.png) center left no-repeat;
}
#hand-visibility-checkbox:hover
{
	background: transparent url(../img/icon_checkbox_01.png) center left no-repeat;
}
#hand-visibility-checkbox.checked
{
	background: transparent url(../img/icon_checkbox_02_o.png) center left no-repeat;
}
#hand-visibility-checkbox.checked:hover
{
	background: transparent url(../img/icon_checkbox_02_o.png) center left no-repeat;
}


/* Canvas
 * ======== */
#write-hanshi *
{
	z-index: 2;
}
#layered-canvas, #hand-canvas, #write-canvas
{
	/* same as #write-hanshi */
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -208px; /* width/2 */
	margin-top: -228px;
	width: 415px;
	height: 498px;

	display: block;
	z-index: 3;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;	
	/*border: 1px solid #c0c0c0;*/
	background-color: rgba(255, 255, 255, 0.0001);
}

#hand-canvas
{
	z-index: 6;
}

#layered-canvas
{
	z-index: 3;
}

#write-canvas
{
	z-index: 4;
}

/* copybook layer */
#copybook-layer
{
	z-index: 3;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -208px; /* width/2 */
	margin-top: -228px;

	font-size: 350px;
	text-align: center;
	vertical-align: middle;
	/* canvas size */
	line-height: 498px;
	height: 498px;
	width: 415px;
}

#copybook-layer img
{
	display: none;
	width: 400px;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -200px;
	margin-top: -200px;
}
#copybook-layer svg|svg
{
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -162px;
	margin-top: -193px;
}

/* 基 */
#copybook-layer.ki svg|svg
{
	margin-left: -162px;
	margin-top: -193px;
}
/* 速 */
#copybook-layer.bi svg|svg
{
	margin-left: -172px;
	margin-top: -203px;
}

/* 美 */
#copybook-layer.soku svg|svg
{
	margin-left: -168px;
	margin-top: -203px;
}

#copybook-layer svg g
{
	display: none;
}

/* Hanshi */
#hanshi
{
	position: absolute;
	top: 0;
	left: 0;
}

/* Hand */
#hand 
{
	z-index: 5;
	position: relative;
	top: 42px;
	left: 0;
}
#hand-image
{
	display: none;
	position: absolute;
	top: 0;
	left: 0;
}
#hand-image-small
{
	display: none;
	position: relative;
	top: -6px;
	left: -14px;
}
#hand-image-medium
{
	position: relative;
	top: -14px;
	left: -24px;
}
#hand-image-large
{
	display: none;
	position: relative;
	top: -20px;
	left: -27px;
}

/* Top Menu
 * ======== */
#top-menu
{
	z-index: 2;
	margin: 0;
	padding: 0;
	position: absolute;
	top: -30px;
	left: 50%;
	margin-left: 82px;
}
#top-menu:after
{
	clear: both;
	content: '';
	display: block;
}
#top-menu > li
{
	margin: 0;
	padding: 0;
	_display: inline-block;
	float: left;
	list-style-type: none;
	position: relative;
}
#top-menu > li > a
{
	display: inline-block;
	line-height: 28px;
	width: 70px;
	height: 28px;
	background-color: #000000;
	color: #ffffff;
	text-align: center;
	text-decoration: none;
	background: -moz-linear-gradient(top, #45484d 0%, #000000 50%,#000000 100%);
	background: -webkit-linear-gradient(top, #45484d 0%, #000000 50%,#000000 100%);
	background: linear-gradient(to bottom, #45484d 0%, #000000 50%,#000000 100%);
}#p-menu > li > a:hover
{
	color: #ffffff;
	background-color: #444444;
	/* background: url(../img/bg_topmenu_btn-left_01_h.png) top left no-repeat, 
				url(../img/bg_topmenu_btn-center_01_h.png) top center repeat-x; */
}
/* #top-menu > li:nth-child(2) a
{
	background: url(../img/bg_topmenu_btn-center_01.png) top left no-repeat, 
				url(../img/bg_topmenu_btn-center_01.png) top center repeat-x;
}
#top-menu > li:nth-child(2) a:hover
{
	background: url(../img/bg_topmenu_btn-center_01_h.png) top left no-repeat, 
				url(../img/bg_topmenu_btn-center_01_h.png) top center repeat-x;
} */

/* #top-menu > li:first-child a */
#top-menu > li a
{
	border-right: 1px dotted #4d4d4d;
}


/* menu-folding */
#top-menu .menu-folding
{
}
#top-menu .menu-folding .submenu
{
	display: none;
}
/* ... */

